--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ authors = ["y.konyushenko a.bredikhin"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pandas = "^1.4.3"
+numpy = ""
+scipy = { version = "^1.8.1", python = "~3.9" }
+numba = { version = "^0.55.2", python = "~3.9" }
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
-polara = {git = "git@github.com:evfro/polara.git"}
+polara = {git = "git@github.com:evfro/polara.git", branch = "develop"}
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
