--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = ""
 scipy = { version = "^1.8.1", python = "~3.9" }
 numba = { version = "^0.55.2", python = "~3.9" }
 requests = "^2.28.1"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 polara = {git = "git@github.com:evfro/polara.git", branch = "develop"}
