--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,6 +19,6 @@ SASRec:
   optimizer_params:
     lr: 0.001
     weight_decay: 1e-5
-  num_epoch: 10
+  num_epoch: 60
   model_save_path: './data/SASRec/SASRec.pt'
-  device: 'cpu'
+  device: 'cuda'
