--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ hydra-core = "^1.1.1"
 [tool.poetry.dev-dependencies]
 polara = {git = "git@github.com:evfro/polara.git", branch = "develop"}
 jupyter = "^1.0.0"
+matplotlib = "^3.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
