--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,3 +22,10 @@ SASRec:
   num_epoch: 60
   model_save_path: './data/SASRec/SASRec.pt'
   device: 'cpu'
+
+TensorModel:
+  core_shape: [70, 70, 5]
+  n_ratings: 10
+  num_iters: 5
+  rating_plus: [8, 9]
+  rating_minus: [0, 1]
